[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zros2"
version = "1.0.0"
description = "Zenoh ROS 2 bridge — lightweight ROS2-like communication over Zenoh"
authors = [
    { name = "Dafan Wang" },
]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["zenoh", "ros2", "ros", "robotics", "dds", "cdr"]

dependencies = [
    "eclipse-zenoh>=1.9.0",
    "pycdr2>=1.0.0",
    "numpy>=2.4.6",
    "lark>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
zros2-gen = "zros2.generator.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/zros2"
Repository = "https://github.com/your-org/zros2.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zros2*"]

[tool.setuptools.package-data]
"zros2" = ["py.typed"]
"zros2.generator" = ["builtin_msgs/**/*.msg", "builtin_msgs/**/*.srv", "builtin_msgs/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
